table filled with data, needs to be divided and collumn headed and footer

--- a/layout.html
+++ b/layout.html
@@ -2,9 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>TITLE HERE</title>
+        <title>Assignment 2  [cs290]</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+    <style>
+  table { border-collapse: collapse; border: solid thick; }
+  colgroup, tbody { border: solid medium; }
+  td { border: solid thin; height: 1.4em; width: 1.4em; text-align: center; padding: 10; }
+ </style>
     <body>
-        Body here
+        <table>
+            <caption>Programming Languages Used by Brandon Swanson</caption>
+            <th> <tr> <td> </td> <td>Python <td> HTML <td>Assembly <td>C\C++ <td>Java\Android
+            <tr> <td>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
+            <tr> <td>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
+            <tr> <td>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
+            <tr> <td>Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
+            <tr> <td>Will use again <td> for little stuff <td> sadly not likley<td> Probably <td> certainly <td> Hopefully
+        </table>
     </body>
 </html>
