--- a/layout.html
+++ b/layout.html
@@ -3,17 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Assignment 2  [cs290]</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"> 
     </head>
-    <style>
-  table { border-collapse: collapse; border: solid thick; }
-  colgroup, tbody { border: solid medium; }
-  td { border: solid thin; height: 1.4em; width: 1.4em; text-align: center; padding: 10; }
- </style>
+    
     <body>
         <table>
             <caption>Programming Languages Used by Brandon Swanson</caption>
-            <th> <tr> <td> </td> <td>Python <td> HTML <td>Assembly <td>C\C++ <td>Java\Android
+            <thead><tr> <td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
+            <tbody>
             <tr> <td>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
             <tr> <td>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
             <tr> <td>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
