remove tr nested in thead

--- a/layout.html
+++ b/layout.html
@@ -9,7 +9,7 @@
     <body>
         <table>
             <caption>Programming Languages Used by Brandon Swanson</caption>
-            <thead><tr> <td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
+            <thead> <td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
             <tbody>
             <tr> <td>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
             <tr> <td>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
