selecting first collumn, but including footer, turning red not italic

--- a/layout.html
+++ b/layout.html
@@ -16,6 +16,7 @@
             <tr> <td>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
             <tr> <td>Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
             <tr> <td>Will use again <td> for little stuff <td> sadly not likley<td> Probably <td> certainly <td> Hopefully
+            <tfoot><td>foot1 <td> foot2
         </table>
     </body>
 </html>
