made row labels headers, colspan is in html, should it be

--- a/layout.html
+++ b/layout.html
@@ -5,18 +5,20 @@
         <title>Assignment 2  [cs290]</title>
         <link rel="stylesheet" href="style.css"> 
     </head>
-    
     <body>
         <table>
+            <colgroup>
+            <colgroup>
+            <colgroup>
             <caption>Programming Languages Used by Brandon Swanson</caption>
             <thead> <td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
             <tbody>
-            <tr> <td>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
-            <tr> <td>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
-            <tr> <td>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
-            <tr> <td>Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
-            <tr> <td>Will use again <td> for little stuff <td> sadly not likley<td> Probably <td> certainly <td> Hopefully
-            <tfoot><td>foot1 <td> foot2
+            <tr> <th>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
+            <tr> <th>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
+            <tr> <th>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
+            <tr> <th>Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
+            <tr> <th>Will use again <td> for little stuff <td> sadly not likley<td> Probably <td> certainly <td> Hopefully
+            <tfoot><tr><td colspan="2">foot1 <td colspan="4"> foot2
         </table>
     </body>
 </html>
