row added, content fliped

--- a/layout.html
+++ b/layout.html
@@ -11,13 +11,13 @@
             <colgroup>
             <colgroup>
             <caption>Programming Languages Used by Brandon Swanson</caption>
-            <thead> <td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
+            <thead> <tr><td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
             <tbody>
             <tr> <th>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
             <tr> <th>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
             <tr> <th>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
             <tr> <th>Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
-            <tr> <th>Will use again <td> for little stuff <td> sadly not likley<td> Probably <td> certainly <td> Hopefully
+            <tr> <th>Will use again <td> for little stuff <td> Probably <td> sadly not likley<td> certainly <td> Hopefully
             <tfoot><tr><td colspan="2">foot1 <td colspan="4"> foot2
         </table>
     </body>
