changed allignment, padding, and thschope

--- a/layout.html
+++ b/layout.html
@@ -8,14 +8,25 @@
     <body>
         <table>
             <caption>Programming Languages Used by Brandon Swanson</caption>
-            <thead> <tr><td> <th>Python <th> HTML <th>Assembly <th>C\C++ <th>Java\Android 
+            <thead> <tr><td> <th scope="col">Python <th scope="col"> HTML <th scope="col">Assembly <th scope="col">C\C++ <th scope="col">Java\Android 
             <tbody>
-            <tr> <th>Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
-            <tr> <th>Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
-            <tr> <th>Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
-            <tr> <th>Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
-            <tr> <th>Will use again <td> for little stuff <td> Probably <td> sadly not likley<td> certainly <td> Hopefully
+            <tr> <th scope="row">Used <td>Yes <td>Yes <td>Yes <td>Yes <td>Yes
+            <tr> <th scope="row">Enjoyed <td>Yes <td>No <td>Yes <td>Sometimes <td>Yes
+            <tr> <th scope="row">Self-Taught <td>Yes <td> No <td> No <td> No <td> Yes
+            <tr> <th scope="row">Difficulty(1-5) <td>2 <td>4 <td>5 <td>4 <td>4
+            <tr> <th scope="row">Will use again <td> for little stuff <td> Probably <td> sadly not likley<td> certainly <td> Hopefully
             <tfoot><tr><td colspan="2">foot1 <td colspan="4"> foot2
         </table>
+
+        <dl>
+            <dt>Most Fun Project
+            <dd>NCURSES Game-of-Life
+
+            <dt>Most Ambitions Project
+            <dd>Imposter - a yet-to-be released android game
+
+            <dt>Current Project
+            <dd>A live web-page whose URL will be at the bottom of our wedding invitation
+        </dl>
     </body>
 </html>
