divs completed, margin set to auto was the key to centering in this case, vertical-align only applies to td elements, position is a more explicit way to adjust alignment

--- a/layout.html
+++ b/layout.html
@@ -28,5 +28,12 @@
             <dt>Current Project
             <dd>A live web-page whose URL will be at the bottom of our wedding invitation
         </dl>
+
+        <div class="outer-content">
+            <div class="inner-content">
+                These are divs!
+            </div>
+        </div>
+
     </body>
 </html>
