forms complete, radio buttons must share same name to be grouped

--- a/layout.html
+++ b/layout.html
@@ -35,5 +35,57 @@
             </div>
         </div>
 
+        <!-- Get Method Form -->
+        <br><br>
+        <form action = "http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method ="get">
+            <fieldset> <legend>A Get Method Form</legend>
+
+            <label> text here: <input type="text" name="text_input"> <br>
+            <label> number here: <input type="number" name="numerical_input"> <br>
+            <label> password here: <input type="password" name="passwrod_input"> <br>
+
+            <radiogroup>
+                <legend>Candy</legend>
+                <input type="radio" name="Candy" value="Snickers" checked>Snickers<br>
+                <input type="radio" name="Candy" value="Skittles"> Skittles <br>
+                <input type="radio" name="Candy" value="Mentos"> Mentos <br>
+            </radiogroup>
+
+            <input type="submit">
+            </fieldset>
+        </form>
+
+        <!-- Post Method Form -->
+        <br><br>
+        <form action = "http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method ="post">
+            <fieldset> <legend>A Post Method Form</legend>
+
+            <label> text here: <input type="text" name="text_input"> <br>
+            <label> number here: <input type="number" name="numerical_input"> <br>
+            <label> password here: <input type="password" name="passwrod_input"> <br>
+
+            <radiogroup>
+                <legend>Candy</legend>
+                <input type="radio" name="Candy" value="Snickers" checked>Snickers<br>
+                <input type="radio" name="Candy" value="Skittles"> Skittles <br>
+                <input type="radio" name="Candy" value="Mentos"> Mentos <br>
+            </radiogroup>
+
+            <input type="submit">
+            </fieldset>
+        </form><br><br>
+
+        <img src="profilepic.jpg">
+
+
+        <!--Two paragraphs of text -->
+        My name is Brandon Swanson and I am 30 years old
+        I am very much enjoying the Ecampus program so far.  I live in the bay area Califorina and am looking forward to it being warm enough to go surfing again.
+        <br><br>
+        My interest in programming began at home learning BASIC,  decades ago, then in highschool c++ and Visual Basic, and in college c,  but obviously I went on to pursue a degree in another field.
+        I later went on to learn some Iphone/Android programming during spare time, learning the concepts of OOP along the way, and decided to begin studying it again.
+        <br><br>
+        Over this last break I learned Python and used it to solve about 60 of the Euler Project problems.  It was a great way to learn a new language and keep my problem solving skills sharp between terms.  There are a lot of features of Python I really enjoy and found it very fast to develop in.
+
     </body>
 </html>
