corrected w3 validator errors, removed radiogroup and label tag, added alt to img tag>

--- a/layout.html
+++ b/layout.html
@@ -40,16 +40,16 @@
         <form action = "http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method ="get">
             <fieldset> <legend>A Get Method Form</legend>
 
-            <label> text here: <input type="text" name="text_input"> <br>
-            <label> number here: <input type="number" name="numerical_input"> <br>
-            <label> password here: <input type="password" name="passwrod_input"> <br>
+            text here: <input type="text" name="text_input"> <br>
+            number here: <input type="number" name="numerical_input"> <br>
+            password here: <input type="password" name="passwrod_input"> <br>
 
-            <radiogroup>
-                <legend>Candy</legend>
+            <fieldset>
+                Choose a Candy<br>
                 <input type="radio" name="Candy" value="Snickers" checked>Snickers<br>
                 <input type="radio" name="Candy" value="Skittles"> Skittles <br>
                 <input type="radio" name="Candy" value="Mentos"> Mentos <br>
-            </radiogroup>
+            </fieldset>
 
             <input type="submit">
             </fieldset>
@@ -60,22 +60,22 @@
         <form action = "http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method ="post">
             <fieldset> <legend>A Post Method Form</legend>
 
-            <label> text here: <input type="text" name="text_input"> <br>
-            <label> number here: <input type="number" name="numerical_input"> <br>
-            <label> password here: <input type="password" name="passwrod_input"> <br>
+            text here: <input type="text" name="text_input"> <br>
+            number here: <input type="number" name="numerical_input"> <br>
+            password here: <input type="password" name="passwrod_input"> <br>
 
-            <radiogroup>
-                <legend>Candy</legend>
+            <fieldset>
+                Choose a Candy<br>
                 <input type="radio" name="Candy" value="Snickers" checked>Snickers<br>
                 <input type="radio" name="Candy" value="Skittles"> Skittles <br>
                 <input type="radio" name="Candy" value="Mentos"> Mentos <br>
-            </radiogroup>
+            </fieldset>
 
             <input type="submit">
             </fieldset>
         </form><br><br>
 
-        <img src="profilepic.jpg">
+        <img src="profilepic.jpg" alt="profile picture" title="me in Santa Barbara">
 
 
         <!--Two paragraphs of text -->
